--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.11.0",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
     "install": "^0.13.0",
     "lucide-react": "^0.525.0",
