--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.24.0",
+    "@clerk/types": "^4.64.0",
     "@prisma/client": "6.11.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-json-view": "^1.21.3",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
