--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/client": "6.11.0",
     "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.23.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
@@ -28,7 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
