--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
